@@ -18,13 +18,51 @@
 
 package org.apache.hadoop.yarn.api.records;
 
-
-
-public interface ApplicationId extends Comparable<ApplicationId> {
+public abstract class ApplicationId implements Comparable<ApplicationId> {
   public abstract int getId();
   public abstract long getClusterTimestamp();
   
   public abstract void setId(int id);
   public abstract void setClusterTimestamp(long clusterTimestamp);
   
+  
+  @Override
+  public int compareTo(ApplicationId other) {
+    if (this.getClusterTimestamp() - other.getClusterTimestamp() == 0) {
+      return this.getId() - other.getId();
+    } else {
+      return this.getClusterTimestamp() > other.getClusterTimestamp() ? 1 : 
+        this.getClusterTimestamp() < other.getClusterTimestamp() ? -1 : 0;
+    }
+  }
+
+  @Override
+  public String toString() {
+    return "application_" + this.getClusterTimestamp() + "_" + this.getId();
+  }
+  
+  @Override
+  public int hashCode() {
+    // Generated by eclipse.
+    final int prime = 31;
+    int result = 1;
+    long clusterTimestamp = getClusterTimestamp();
+    result = prime * result
+        + (int) (clusterTimestamp ^ (clusterTimestamp >>> 32));
+    result = prime * result + getId();
+    return result;
+  }
+
+  @Override
+  public boolean equals(Object other) {
+    if (other == null) return false;
+    if (other.getClass().isAssignableFrom(this.getClass())) {
+      ApplicationId otherAppId = (ApplicationId)other;
+      if (this.getClusterTimestamp() == otherAppId.getClusterTimestamp() &&
+          this.getId() == otherAppId.getId()) {
+        return true;
+      }
+    }
+    return false;
+  }
 }
