@@ -18,35 +18,19 @@
 
 package org.apache.hadoop.yarn.api.records.impl.pb;
 
-
-import java.text.NumberFormat;
-
 import org.apache.hadoop.yarn.api.records.ApplicationAttemptId;
 import org.apache.hadoop.yarn.api.records.ApplicationId;
-import org.apache.hadoop.yarn.api.records.ProtoBase;
 import org.apache.hadoop.yarn.proto.YarnProtos.ApplicationAttemptIdProto;
 import org.apache.hadoop.yarn.proto.YarnProtos.ApplicationAttemptIdProtoOrBuilder;
 import org.apache.hadoop.yarn.proto.YarnProtos.ApplicationIdProto;
 
-public class ApplicationAttemptIdPBImpl extends ProtoBase<ApplicationAttemptIdProto> implements ApplicationAttemptId {
+public class ApplicationAttemptIdPBImpl extends ApplicationAttemptId {
   ApplicationAttemptIdProto proto = ApplicationAttemptIdProto.getDefaultInstance();
   ApplicationAttemptIdProto.Builder builder = null;
   boolean viaProto = false;
   
   private ApplicationId applicationId = null;
-  protected static final NumberFormat idFormat = NumberFormat.getInstance();
-  static {
-    idFormat.setGroupingUsed(false);
-    idFormat.setMinimumIntegerDigits(4);
-  }
-  
-  protected static final NumberFormat counterFormat = NumberFormat.getInstance();
-  static {
-    counterFormat.setGroupingUsed(false);
-    counterFormat.setMinimumIntegerDigits(6);
-  }
-  
-  
+
   public ApplicationAttemptIdPBImpl() {
     builder = ApplicationAttemptIdProto.newBuilder();
   }
@@ -117,44 +101,11 @@ public class ApplicationAttemptIdPBImpl extends ProtoBase<ApplicationAttemptIdPr
     this.applicationId = appId;
   }
 
-  private synchronized ApplicationIdPBImpl convertFromProtoFormat(ApplicationIdProto p) {
+  private ApplicationIdPBImpl convertFromProtoFormat(ApplicationIdProto p) {
     return new ApplicationIdPBImpl(p);
   }
 
-  private synchronized ApplicationIdProto convertToProtoFormat(ApplicationId t) {
+  private ApplicationIdProto convertToProtoFormat(ApplicationId t) {
     return ((ApplicationIdPBImpl)t).getProto();
-  }
-
-  @Override
-  public synchronized int hashCode() {
-    return getProto().hashCode();
-  }
-
-  @Override
-  public synchronized boolean equals(Object other) {
-    if (other == null) return false;
-    if (other.getClass().isAssignableFrom(this.getClass())) {
-      return this.getProto().equals(this.getClass().cast(other).getProto());
-    }
-    return false;
-  }
-
-  @Override
-  public synchronized int compareTo(ApplicationAttemptId other) {
-    int compareAppIds = this.getApplicationId().compareTo(
-        other.getApplicationId());
-    if (compareAppIds == 0) {
-      return this.getAttemptId() - other.getAttemptId();
-    } else {
-      return compareAppIds;
-    }
-    
-  }
-  
-  @Override
-  public synchronized String toString() {
-    String id = (this.getApplicationId() != null) ? this.getApplicationId().getClusterTimestamp() + "_" +
-        idFormat.format(this.getApplicationId().getId()): "none";
-    return "appattempt_" + id + "_" + counterFormat.format(getAttemptId());
   }
 }  
